[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "audit-protocol-sdk"
version         = "1.0.0"
description     = "Python SDK для AI Audit Protocol"
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "MIT" }

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",       # mock httpx в тестах
]

[tool.setuptools.packages.find]
where = ["."]
include = ["audit_protocol_sdk*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
